[tool.poetry]
name = "prog-fest-util"
version = "0.1.0"
description = ""
authors = ["Gabriel Couture <gacou54@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.1"
pydicom = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
